--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,7 @@
   position: sticky;
   top: 0;
   display: flex;
+  background-color: var(--background-color);
   justify-content: space-evenly;
   border-bottom: 0.1px solid var(--color-lightgray);
   padding: 10px 0px;
