--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,7 +8,11 @@
 }
 
 .sidebar__avatar {
+  margin-top: -10px;
   margin-bottom: 10px;
+  width: 60px !important;
+  height: 60px !important;
+  object-fit: contain;
 }
 
 .sidebar__top > h4 {
